Support for libpng 1.5 - the type for iCCP data has changed.

BUG: 264181


svn path=/trunk/extragear/graphics/digikam/; revision=1216968